# tencentcloud-sms-sdk-rust

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
examples/: send_sms.rs
src/: error.rs  lib.rs
src/core/: client.rs  credential.rs  mod.rs  profile.rs  signature.rs
src/sms/: mod.rs  models.rs
tests/: integration_test.rs
